Closed
Bug 1494392
Opened 7 years ago
Closed 7 years ago
fix thinkos in the aarch64 windows interceptor code
Categories
(Core :: mozglue, defect)
Tracking
()
RESOLVED
FIXED
mozilla64
| Tracking | Status | |
|---|---|---|
| firefox64 | --- | fixed |
People
(Reporter: froydnj, Assigned: froydnj)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
|
1.22 KB,
patch
|
bugzilla
:
review+
|
Details | Diff | Splinter Review |
+++ This bug was initially created as a clone of Bug #1485701 +++
Because I fail at coding, the patch from bug 1485701 had some syntax errors.
| Assignee | ||
Updated•7 years ago
|
Summary: add aarch64 windows support to the interceptor code → fix thinkos in the aarch64 windows interceptor code
| Assignee | ||
Comment 1•7 years ago
|
||
The reindentation on the second assertion seemed reasonable to me.
Attachment #9012288 -
Flags: review?(aklotz)
Updated•7 years ago
|
Attachment #9012288 -
Flags: review?(aklotz) → review+
Pushed by nfroyd@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/582f4fc155f7
fix thinkos in the aarch64 windows interceptor code; r=aklotz
Comment 3•7 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 7 years ago
status-firefox64:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla64
You need to log in
before you can comment on or make changes to this bug.
Description
•