Bug 1494392 - fix thinkos in the aarch64 windows interceptor code; r=aklotz