mozglue/misc/interceptor/PatcherDetour.h
@@ -134,7 +134,7 @@ public:
         continue;
       }
 #elif defined(_M_ARM64)
-      MOZ_RELEASE_ASSERT(false, "Shouldn't get here")
+      MOZ_RELEASE_ASSERT(false, "Shouldn't get here");
 #else
 #error "Unknown processor type"
 #endif
@@ -969,7 +969,7 @@ protected:
       }
     }
 #elif defined(_M_ARM64)
-      MOZ_RELEASE_ASSERT(false, "Shouldn't get here")
+    MOZ_RELEASE_ASSERT(false, "Shouldn't get here");
 #else
 #error "Unknown processor type"
 #endif
